2009-10-27  Tristan Gingold  <gingold@adacore.com>

	* config/tc-avr.c (md_pseudo_table): Add dwarf2 debug pseudo.
	* config/tc-avr.h (DWARF2_LINE_MIN_INSN_LENGTH): Define.
	(DWARF2_ADDR_SIZE): Define.

2009-10-27  Alan Modra  <amodra@bigpond.net.au>

	PR gas/10850
	* listing.c (listing_flags): Delete.
	* listing.h: Likewise.
	* read.c (potable <lflags>): Call s_ignore.

2009-10-26  Nick Clifton  <nickc@redhat.com>

	* doc/as.texinfo: Add mention of RX port and inclusion of RX
	documentation.

2009-10-25  Arnold Metselaar  <arnold.metselaar@planet.nl>

	* config/tc-z80.c (z80_start_line_hook): Fix parsing of 'equ' or
	'defl' in cases where the space between the keyword and the
	expression has been scrubbed away.
	Do not check whether a symbol is redefined with 'equ' here;
	the function equals takes an argument indicating whether
	redefinitions are allowed.
	Only call LISTING_NEWLINE if needed, and then after the call to
	bump_line_counters.

2009-10-25  Maciej W. Rozycki  <macro@linux-mips.org>

	* doc/as.texinfo (Overview): Move -mfix7000/-mno-fix7000 to
	match the order elsewhere.  Add -mfix-vr4120/-mno-fix-vr4120 and
	-mfix-vr4130/-mno-fix-vr4130.
	* doc/c-mips.texi (MIPS Opts): Correct -no-mfix-vr4120 to
	-mno-fix-vr4120 and -no-mfix-vr4130 to -mno-fix-vr4130.

2009-10-20  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/10775
	* doc/c-i386.texi: Mention movabs.

2009-10-19  H.J. Lu  <hongjiu.lu@intel.com>

	* doc/c-i386.texi: Don't mention the 8 extra control registers
	for x86-64.

2009-10-19  Doug Evans  <dje@sebabeach.org>

	* config/tc-lm32.c (md_begin): Add missing call to bfd_set_arch_mach.

	* config/tc-xc16x.c (md_cgen_lookup_reloc): Ensure fix_size is set
	correctly for all 16 bit relocs.  Return BFD_RELOC_NONE if reloc
	isn't recognized, not BFD_RELOC_XC16X_SOF.

2009-10-18  Alan Modra  <amodra@bigpond.net.au>

	* as.h (know): Don't define as empty.
	* config/tc-arm.c (make_mapping_symbol): Revert last patch.

2009-10-18  Matthias Klose  <doko@ubuntu.com>
