@@ -1,3 +1,10 @@
+2009-10-28  Alan Modra  <amodra@bigpond.net.au>
+
+	PR gas/10856
+	* expr.c (resolve_expression): Only add "left" value to O_symbol
+	expression when the symbol is undefined and different from the
+	original symbol.  Simplify negative logic.
+
 2009-10-27  Tristan Gingold  <gingold@adacore.com>
 
 	* config/tc-avr.c (md_pseudo_table): Add dwarf2 debug pseudo.
